# solrect

examples/tutorial/basic-0/: client.js  package-lock.json  package.json
examples/tutorial/basic-0/app/: package-lock.json  package.json
examples/tutorial/basic-0/app/src/: App.css  App.js  Nopage.js  idl.json
examples/tutorial/basic-0/app/src/component/login/: Login.js
examples/tutorial/basic-0/app/src/components/auth/login/: login.js
examples/tutorial/basic-0/app/src/components/auth/register/: register.js
examples/tutorial/basic-0/app/src/components/customer/dashboard/: dashboard.css  dashboard.js  main.js
examples/tutorial/basic-0/app/src/components/customer/dashboard/report/: report.js
examples/tutorial/basic-0/app/src/components/customer/layout/: layout.js  loader.js  sidebar.css  sidebar.js
examples/tutorial/basic-0/programs/basic-0/: Cargo.toml
examples/tutorial/basic-0/programs/basic-0/src/: lib.rs
examples/tutorial/basic-0/tests/: basic-0.js
examples/tutorial/basic-0/tests/utils/: index.js
