[package]
name = "basic-0"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_0"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
anchor-spl-token = "0.18.12"


